feat: add cards and connect button to login page

--- a/src/components/Cards/styles.module.scss
+++ b/src/components/Cards/styles.module.scss
@@ -2,6 +2,7 @@
   grid-column-gap: 20px;
   display: flex;
   flex-wrap: wrap;
+  max-width: 1055px;
 
   @media (min-width: 1200px) {
     flex-wrap: nowrap;
