--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -1,18 +1,28 @@
 /* Bootstrap overrides
 -------------------------------------------------- */
-$body: #000;
+$body: url('../img/bodyBackground.png') no-repeat center / cover, black;
+$black: #000;
 $headings-font-weight: 300 !important;
 $primary: #1b46c2;
 $light: #fafafa;
 $gray-400: #fffeee;
 $white: #fff;
 
+$modal-content-color: $light;
+$modal-header-border-color: #49494d;
+$modal-content-border-color: #49494d;
+$modal-content-border-radius: 15px;
+$modal-content-bg: $black;
+$modal-backdrop-opacity: 0.5;
+
 /* Do not move the imports from here.
 Override Bootstrap variables only above.
 -------------------------------------------------- */
 
 // Bootstrap
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css');
+@import '~bootstrap/scss/bootstrap.scss';
+
+@import '~bootstrap/scss/reboot';
 
 /* Base
 -------------------------------------------------- */
@@ -22,12 +32,27 @@ html {
 }
 
 body {
-  background: url('../img/bodyBackground.png') no-repeat center / cover, black;
+  background: $body;
   font-family: 'Helvetica', sans-serif;
   box-sizing: border-box;
+  #dapp-modal {
+    z-index: 1075;
+  }
+  .dapp-extension-login {
+    text-decoration: none;
+  }
+  .modal-dialog {
+    margin: 30px;
+    .modal-header {
+      .btn-close {
+        background-color: $modal-header-border-color;
+      }
+    }
 
-  &.modal-open #root {
-    filter: blur(8px);
+    @media (min-width: 576px) {
+      max-width: 480px;
+      margin: 30px auto;
+    }
   }
 }
 
@@ -54,19 +79,6 @@ body {
     width: 80px;
     height: 80px;
   }
-}
-
-.modal-dialog {
-  margin: 30px;
-
-  @media (min-width: 576px) {
-    max-width: 480px;
-    margin: 30px auto;
-  }
-}
-
-.modal-content {
-  background: transparent !important;
 }
 
 /* Navbar
