--- a/src/assets/sass/theme.scss
+++ b/src/assets/sass/theme.scss
@@ -20,9 +20,9 @@ Override Bootstrap variables only above.
 -------------------------------------------------- */
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap.scss';
+@import 'bootstrap/scss/bootstrap.scss';
 
-@import '~bootstrap/scss/reboot';
+@import 'bootstrap/scss/reboot';
 
 /* Base
 -------------------------------------------------- */
@@ -35,14 +35,20 @@ body {
   background: $body;
   font-family: 'Helvetica', sans-serif;
   box-sizing: border-box;
+
   #dapp-modal {
     z-index: 1075;
   }
+
   .dapp-extension-login {
     text-decoration: none;
   }
+
   .modal-dialog {
+    width: 25vw;
+    min-width: 200px;
     margin: 30px;
+
     .modal-header {
       .btn-close {
         background-color: $modal-header-border-color;
@@ -53,8 +59,13 @@ body {
       max-width: 480px;
       margin: 30px auto;
     }
+
+    @media (max-width: 576px) {
+      width: 90vw;
+    }
   }
 }
+
 
 .wrapper {
   min-height: 100vh;
@@ -125,6 +136,7 @@ body {
   }
 
   &.table {
+
     td,
     tr {
       padding: 0.65rem;
@@ -159,6 +171,7 @@ body {
     width: 64px;
     height: 64px;
   }
+
   .lds-ellipsis div {
     position: absolute;
     top: 27px;
@@ -168,45 +181,56 @@ body {
     background: rgba(0, 0, 0, 0.1);
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
+
   .bg-blue .lds-ellipsis div {
     background: rgba(255, 255, 255, 0.4);
   }
+
   .lds-ellipsis div:nth-child(1) {
     left: 6px;
     animation: lds-ellipsis1 0.6s infinite;
   }
+
   .lds-ellipsis div:nth-child(2) {
     left: 6px;
     animation: lds-ellipsis2 0.6s infinite;
   }
+
   .lds-ellipsis div:nth-child(3) {
     left: 26px;
     animation: lds-ellipsis2 0.6s infinite;
   }
+
   .lds-ellipsis div:nth-child(4) {
     left: 45px;
     animation: lds-ellipsis3 0.6s infinite;
   }
+
   @keyframes lds-ellipsis1 {
     0% {
       transform: scale(0);
     }
+
     100% {
       transform: scale(1);
     }
   }
+
   @keyframes lds-ellipsis3 {
     0% {
       transform: scale(1);
     }
+
     100% {
       transform: scale(0);
     }
   }
+
   @keyframes lds-ellipsis2 {
     0% {
       transform: translate(0, 0);
     }
+
     100% {
       transform: translate(19px, 0);
     }
